@@ -8,6 +8,7 @@ Version 1.7.13+svn:
  * Language and i18n:
    * Updated translations: Czech, Finnish, Italian, Lithuanian, Polish
  * Multiplayer
+   * Make allow_changes attribute truly work
    * Fixed players getting different side colours across scenarios of mp
      campaigns
    * Fixed bug 14754: Host can start game before the client has selected a
